--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -46,3 +46,8 @@ li {
     text-shadow: 2px 2px 1px #3b6a5e;
     border-top: 1px solid #7ee0c9;
     border-bottom: 1px solid #3b6a5e;}
+
+.random {
+    @extend .sundt;
+    background-color: #d6208a;
+}
